# ProfileCAD

./: .depend  .gitignore  CMakeCache.txt  Config.profile  Engine.js  LICENSE.txt  Makefile  ProfileCAD  ProfileCAD.html  README.md  cmake_install.cmake  package-lock.json  package.json  test.cad  test.dxf  test.pfcad
OldSrc/inc/: Dialog.h  FileIO.h  UI.h  Window.h
OldSrc/src/: CAD.cpp  CMakeLists.txt  Dialog.cpp  FileIO.cpp  Geometry.cpp  Lua.cpp  Machine.cpp  Mouse.cpp  Window.cpp
ProfileCAD.app/Contents/MacOS/: ProfileCAD
build_osx/: CMakeCache.txt  Makefile  cmake_install.cmake
build_osx/ProfileCAD.app/Contents/: Info.plist
build_osx/ProfileCAD.app/Contents/MacOS/: ProfileCAD
docs/: TinyG.md
inc/: CAD.h  CLI.h  Config.h  Debug.h  Dialog.h  Engine.h  FileIO.h  Geometry.h  Keyboard.h  Lua.h  Machine.h  Menu.h  Mouse.h  Scene.h  Script.h  UI.h  Window.h  application.h  main.h
layout/CAD/: CAD.html
layout/CAD/css/: CAD.css
lib/: JetCad-Tools.js  JetCad.js  MotionPlanner.js  ProfileGeometry.js  ProfileRender.js
libs/duktape-1.4.0/: duk
res/: icon.xpm
scripts/: advanced_drawing.js  cli.js  dimension.js  drawing.js  file_converters.js  geometry.js  helpers.js  main.js  modify.js  popup_menu.js  screen.js  xform.js
src/: CAD.cpp  CLI.cpp  CMakeLists.txt  Config.cpp  Debug.cpp  Dialog.cpp  Engine.cpp  FileIO.cpp  Geometry.cpp  Keyboard.cpp  Lua.cpp  Machine.cpp  Menu.cpp  Mouse.cpp  ProfileCAD.cxx  Scene.cpp  Script.cpp  UI.cpp  Window.cpp  main.cpp  main.js
src/CAD/: app.js  drawing_tools.js  terminal.js
src/Global/: WorkbenchMenu.js
test/: cube.dxf  simple.mc8
test/dxf/: 0.dxf  1.dxf  BIG_BLOCK_CHEVY_HEADER_FLANGE.DXF  BRACKETS.DXF  COPPERHEAD_LOGO.DXF  Cop_printer_bracket.dxf  DRAG_BIKE_BRAKE_BRACKET.DXF  PROFILE_LOGO.DXF  Xmotion.dxf  arc.dxf  boltpattern.dxf  box.dxf  circle.dxf  copperhead.dxf  copperhead.dxf~  cube.dxf  default.dxf  merica.dxf  simple.dxf  test.dxf
test/gcode/: hotrod_sign.ngc  trigger_wheel.ngc
test/lua/: line.lua
test/nc/: box.nc  test.nc  testbd.nc  testbot.nc  testtd.nc
test/pfcad/: box.pfcad  copperhead_logo.pfcad  copperhead_logo_filtered.pfcad  profile_logo.pfcad  test.pfcad
